# scgb

./: .gitignore  .gitmodules  Cargo.toml  README.md  index.html  known weird things.txt
assets/: sw.js
dmg/: Cargo.toml
dmg/src/: fde.rs  gb.rs  header.rs  isr.rs  lib.rs  log.rs  memory.rs  renderer.rs  single_step_tests.rs  util.rs
dmg/src/mbc/: mod.rs
src/: app.rs  lib.rs  main.rs
src/emulator/: mod.rs
src/renderer/: channel.rs  mod.rs
src/util/: mod.rs
src/widgets/: mod.rs
src/widgets/framebuf/: mod.rs
